--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             >Web<span class="studio-link">Studio</span>
           </a>
           <ul class="list-link">
-            <li><a class="link studio" href="./index.html">Studio</a></li>
+            <li>
+              <a class="link studio current" href="./index.html">Studio</a>
+            </li>
             <li><a class="link" href="">Portfolio</a></li>
             <li><a class="link" href="">Contacts</a></li>
           </ul>
@@ -63,6 +65,16 @@
           <h2 class="visually-hidden">Directions</h2>
           <ul class="directions-items">
             <li class="directions-items-container">
+              <div class="direction-pictures">
+                <svg
+                  class="logo-directions"
+                  width="64"
+                  height="64"
+                  aria-label="logo-strategy"
+                >
+                  <use href="./images/icons/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-headers">Strategy</h3>
               <p class="section-two-text">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +82,16 @@
               </p>
             </li>
             <li class="directions-items-container">
+              <div class="direction-pictures">
+                <svg
+                  class="logo-directions"
+                  width="64"
+                  height="64"
+                  aria-label="logo-punctuality"
+                >
+                  <use href="./images/icons/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-headers">Punctuality</h3>
               <p class="section-two-text">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +99,16 @@
               </p>
             </li>
             <li class="directions-items-container">
+              <div class="direction-pictures">
+                <svg
+                  class="logo-directions"
+                  width="64"
+                  height="64"
+                  aria-label="logo-diligence"
+                >
+                  <use href="./images/icons/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-headers">Diligence</h3>
               <p class="section-two-text">
                 Research and confirm brands that present the strongest digital
@@ -84,6 +116,16 @@
               </p>
             </li>
             <li class="directions-items-container">
+              <div class="direction-pictures">
+                <svg
+                  class="logo-directions"
+                  width="64"
+                  height="64"
+                  aria-label="logo-technologies"
+                >
+                  <use href="./images/icons/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="section-two-headers">Technologies</h3>
               <p class="section-two-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -109,6 +151,64 @@
               <div class="stars-information">
                 <h3 class="stars-name">Mark Guerrero</h3>
                 <p class="stars-position">Product Designer</p>
+                <ul class="social-container">
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -122,6 +222,64 @@
               <div class="stars-information">
                 <h3 class="stars-name">Tom Ford</h3>
                 <p class="stars-position">Frontend Developer</p>
+                <ul class="social-container">
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -135,6 +293,64 @@
               <div class="stars-information">
                 <h3 class="stars-name">Camila Garcia</h3>
                 <p class="stars-position">Marketing</p>
+                <ul class="social-container">
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -148,6 +364,64 @@
               <div class="stars-information">
                 <h3 class="stars-name">Daniel Wilson</h3>
                 <p class="stars-position">UI Designer</p>
+                <ul class="social-container">
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a class="social-links-items" href="">
+                      <svg
+                        class="logo-links"
+                        width="16"
+                        height="16"
+                        aria-label="logo-technologies"
+                      >
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
