--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </a>
           <ul class="list-link">
             <li>
-              <a class="link studio current" href="./index.html">Studio</a>
+              <a class="link studio" href="./index.html">Studio</a>
             </li>
             <li><a class="link" href="">Portfolio</a></li>
             <li><a class="link" href="">Contacts</a></li>
@@ -433,66 +433,108 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="project-card-item">
             <li class="project-card">
-              <img
-                src="./images/our-portfolio/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="img-portfolio">
+                <img
+                  src="./images/our-portfolio/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="card-information">
                 <h3 class="project-name">Banking App</h3>
                 <p class="project-direction">App</p>
               </div>
             </li>
             <li class="project-card">
-              <img
-                src="./images/our-portfolio/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="img-portfolio">
+                <img
+                  src="./images/our-portfolio/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="card-information">
                 <h3 class="project-name">Cashless Payment</h3>
                 <p class="project-direction">Marketing</p>
               </div>
             </li>
             <li class="project-card">
-              <img
-                src="./images/our-portfolio/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="img-portfolio">
+                <img
+                  src="./images/our-portfolio/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="card-information">
                 <h3 class="project-name">Meditation App</h3>
                 <p class="project-direction">App</p>
               </div>
             </li>
             <li class="project-card">
-              <img
-                src="./images/our-portfolio/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="img-portfolio">
+                <img
+                  src="./images/our-portfolio/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="card-information">
                 <h3 class="project-name">Taxi Service</h3>
                 <p class="project-direction">Marketing</p>
               </div>
             </li>
             <li class="project-card">
-              <img
-                src="./images/our-portfolio/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="img-portfolio">
+                <img
+                  src="./images/our-portfolio/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="card-information">
                 <h3 class="project-name">Screen Illustrations</h3>
                 <p class="project-direction">Design</p>
               </div>
             </li>
             <li class="project-card">
-              <img
-                src="./images/our-portfolio/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="img-portfolio">
+                <img
+                  src="./images/our-portfolio/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="card-information">
                 <h3 class="project-name">Online Courses</h3>
                 <p class="project-direction">Marketing</p>
@@ -502,15 +544,27 @@
         </div>
       </section>
     </main>
+    <!--Footer-->
     <footer class="footer-conteiner">
-      <div class="container footer-box">
-        <a href="./index.html" class="footer-web"
-          >web<span class="footer-studio">Studio</span></a
-        >
-        <p class="footer-information">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div>
+        <div class="container footer-box">
+          <a href="./index.html" class="footer-web"
+            >web<span class="footer-studio">Studio</span></a
+          >
+          <p class="footer-information">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-list">
+          <p class="social-media-p">Social media</p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
