--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
     </main>
     <!--Footer-->
     <footer class="footer-conteiner">
-      <div>
-        <div class="container footer-box">
+      <div class="container footer-box">
+        <div class="footer-webstudio">
           <a href="./index.html" class="footer-web"
             >web<span class="footer-studio">Studio</span></a
           >
@@ -558,11 +558,55 @@
         </div>
         <div class="social-media-list">
           <p class="social-media-p">Social media</p>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <ul class="social-container">
+            <li class="social-links">
+              <a class="social-links-items" href="">
+                <svg
+                  class="logo-links"
+                  width="16"
+                  height="16"
+                  aria-label="logo-technologies"
+                >
+                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links">
+              <a class="social-links-items" href="">
+                <svg
+                  class="logo-links"
+                  width="16"
+                  height="16"
+                  aria-label="logo-technologies"
+                >
+                  <use href="./images/icons/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links">
+              <a class="social-links-items" href="">
+                <svg
+                  class="logo-links"
+                  width="16"
+                  height="16"
+                  aria-label="logo-technologies"
+                >
+                  <use href="./images/icons/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links">
+              <a class="social-links-items" href="">
+                <svg
+                  class="logo-links"
+                  width="16"
+                  height="16"
+                  aria-label="logo-technologies"
+                >
+                  <use href="./images/icons/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
