--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   height="64"
                   aria-label="logo-strategy"
                 >
-                  <use href="./images/icons/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Strategy</h3>
@@ -89,7 +89,7 @@
                   height="64"
                   aria-label="logo-punctuality"
                 >
-                  <use href="./images/icons/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Punctuality</h3>
@@ -106,7 +106,7 @@
                   height="64"
                   aria-label="logo-diligence"
                 >
-                  <use href="./images/icons/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Diligence</h3>
@@ -123,7 +123,9 @@
                   height="64"
                   aria-label="logo-technologies"
                 >
-                  <use href="./images/icons/icons.svg#icon-astronaut-1"></use>
+                  <use
+                    href="./images/icons.svg/icons.svg#icon-astronaut-1"
+                  ></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Technologies</h3>
@@ -161,7 +163,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -175,7 +177,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -189,7 +191,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -203,7 +205,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -232,7 +234,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -246,7 +248,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -260,7 +262,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -274,7 +276,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -303,7 +305,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -317,7 +319,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -331,7 +333,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -345,7 +347,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -374,7 +376,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
+                          href="./images/icons.svg/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -388,7 +390,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
+                          href="./images/icons.svg/icons.svg#icon-twitter-1"
                         ></use>
                       </svg>
                     </a>
@@ -402,7 +404,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
+                          href="./images/icons.svg/icons.svg#icon-facebook-1"
                         ></use>
                       </svg>
                     </a>
@@ -416,7 +418,7 @@
                         aria-label="logo-technologies"
                       >
                         <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
+                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
                         ></use>
                       </svg>
                     </a>
@@ -560,50 +562,56 @@
           <p class="social-media-p">Social media</p>
           <ul class="social-container">
             <li class="social-links">
-              <a class="social-links-items" href="">
+              <a class="social-links-items footer-social-links" href="">
                 <svg
                   class="logo-links"
-                  width="16"
-                  height="16"
+                  width="24"
+                  height="24"
                   aria-label="logo-technologies"
                 >
-                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                  <use
+                    href="./images/icons.svg/icons.svg#icon-instagram-2"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="social-links">
-              <a class="social-links-items" href="">
+              <a class="social-links-items footer-social-links" href="">
                 <svg
                   class="logo-links"
-                  width="16"
-                  height="16"
+                  width="24"
+                  height="24"
                   aria-label="logo-technologies"
                 >
-                  <use href="./images/icons/icons.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-links">
-              <a class="social-links-items" href="">
+              <a class="social-links-items footer-social-links" href="">
                 <svg
                   class="logo-links"
-                  width="16"
-                  height="16"
+                  width="24"
+                  height="24"
                   aria-label="logo-technologies"
                 >
-                  <use href="./images/icons/icons.svg#icon-facebook-1"></use>
+                  <use
+                    href="./images/icons.svg/icons.svg#icon-facebook-1"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="social-links">
-              <a class="social-links-items" href="">
+              <a class="social-links-items footer-social-links" href="">
                 <svg
                   class="logo-links"
-                  width="16"
-                  height="16"
+                  width="24"
+                  height="24"
                   aria-label="logo-technologies"
                 >
-                  <use href="./images/icons/icons.svg#icon-linkedin-1"></use>
+                  <use
+                    href="./images/icons.svg/icons.svg#icon-linkedin-1"
+                  ></use>
                 </svg>
               </a>
             </li>
