--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   height="64"
                   aria-label="logo-strategy"
                 >
-                  <use href="./images/icons.svg/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Strategy</h3>
@@ -89,7 +89,7 @@
                   height="64"
                   aria-label="logo-punctuality"
                 >
-                  <use href="./images/icons.svg/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Punctuality</h3>
@@ -106,7 +106,7 @@
                   height="64"
                   aria-label="logo-diligence"
                 >
-                  <use href="./images/icons.svg/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Diligence</h3>
@@ -123,9 +123,7 @@
                   height="64"
                   aria-label="logo-technologies"
                 >
-                  <use
-                    href="./images/icons.svg/icons.svg#icon-astronaut-1"
-                  ></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="section-two-headers">Technologies</h3>
@@ -162,9 +160,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -176,9 +172,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -190,9 +184,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -204,9 +196,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -233,9 +223,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -247,9 +235,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -261,9 +247,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -275,9 +259,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -304,9 +286,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -318,9 +298,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -332,9 +310,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -346,9 +322,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -375,9 +349,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -389,9 +361,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -403,9 +373,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -417,9 +385,7 @@
                         height="16"
                         aria-label="logo-technologies"
                       >
-                        <use
-                          href="./images/icons.svg/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -569,9 +535,7 @@
                   height="24"
                   aria-label="logo-technologies"
                 >
-                  <use
-                    href="./images/icons.svg/icons.svg#icon-instagram-2"
-                  ></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
@@ -583,7 +547,7 @@
                   height="24"
                   aria-label="logo-technologies"
                 >
-                  <use href="./images/icons.svg/icons.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
@@ -595,9 +559,7 @@
                   height="24"
                   aria-label="logo-technologies"
                 >
-                  <use
-                    href="./images/icons.svg/icons.svg#icon-facebook-1"
-                  ></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
@@ -609,9 +571,7 @@
                   height="24"
                   aria-label="logo-technologies"
                 >
-                  <use
-                    href="./images/icons.svg/icons.svg#icon-linkedin-1"
-                  ></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
